// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DumbTimeline component should match an active TimelineSegment 1`] = `
<div
  className="minimized-timeline active"
  onClick={[Function]}
>
  <div
    className="timeline-title"
  >
    <div
      className="timeline-link"
    >
      Bar
    </div>
  </div>
  <span
    className="assembl-icon-angle-down"
  />
</div>
`;

exports[`DumbTimeline component should match the TimelineSegment 1`] = `
<div
  className="minimized-timeline"
  onClick={[Function]}
>
  <div
    className="timeline-title"
  >
    <div
      className="timeline-link"
    >
      Bar
    </div>
  </div>
  <span
    className="assembl-icon-angle-right"
  />
</div>
`;

exports[`DumbTimeline component should match the TimelineSegment 2`] = `
<div
  className="minimized-timeline"
  onClick={[Function]}
>
  <div
    className="timeline-title"
  >
    <div
      className="timeline-link"
    >
      Bar
    </div>
  </div>
  <span
    className="assembl-icon-angle-right"
  />
</div>
`;
